--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -164,13 +164,13 @@
         <li>
             <p class="font-bold">Web Hosting</p>
             <ul>
-                <a class="text-sm font-light" href="/hosting-linux">Hosting Linux</a>
+                <a class="text-sm font-light" href="/hosting-linux/">Hosting Linux</a>
             </ul>
             <ul>
-                <a class="text-sm font-light" href="/hosting-cloud">Hosting Cloud</a>
+                <a class="text-sm font-light" href="/hosting-cloud/">Hosting Cloud</a>
             </ul>
             <ul>
-                <a class="text-sm font-light" href="/hosting-reseller">Hosting Reseller</a>
+                <a class="text-sm font-light" href="/hosting-reseller/">Hosting Reseller</a>
             </ul>
         </li>
 
@@ -198,10 +198,10 @@
         <li>
             <p class="font-bold">Radio Streaming</p>
             <ul>
-                <a class="text-sm font-light" href="/centovacast">CentovaCast</a>
+                <a class="text-sm font-light" href="/centovacast/">CentovaCast</a>
             </ul>
             <ul>
-                <a class="text-sm font-light" href="/sonicpanel">SonicPanel</a>
+                <a class="text-sm font-light" href="/sonicpanel/">SonicPanel</a>
             </ul>
             <ul>
                 <a class="text-sm font-light" href="#">Azuracast</a>
@@ -211,14 +211,14 @@
         <li>
             <p class="font-bold">Tv Streaming</p>
             <ul>
-                <a class="text-sm font-light" href="/tv-streaming">Streaming</a>
+                <a class="text-sm font-light" href="/tv-streaming/">Streaming</a>
             </ul>
         </li>
 
         <li>
             <p class="font-bold">Reseller Radio</p>
             <ul>
-                <a class="text-sm font-light" href="/reseller-radio">CentovaCast</a>
+                <a class="text-sm font-light" href="/reseller-radio/">CentovaCast</a>
             </ul>
         </li>
 
