--- a/src/components/index/CardHosting.astro
+++ b/src/components/index/CardHosting.astro
@@ -18,9 +18,12 @@ const { src, title, content } = Astro.props;
 <style>
     .hover__carHosting{
         transition: all 0.2s ease-out;
+        border: .1px solid transparent;
+        border-radius: 2rem;
     }
     .hover__carHosting:hover{
         background-color: #fff;
         border-radius: 2rem;
+        border: .1px solid #aeaeae;
     }
 </style>
