--- a/src/pages/dominios.astro
+++ b/src/pages/dominios.astro
@@ -9,6 +9,8 @@ import BuscarDominiosDos from "../components/dominios/BuscarDominiosDos.astro";
 import CardDescripUno from "../components/dominios/CardDescripUno.astro";
 import CardDescripDos from "../components/dominios/CardDescripDos.astro";
 
+import BotonTres from "../components/BotonTres.astro";
+
 ---
 
 <Layout title="Hosting Internet Services | Dominios">
@@ -103,8 +105,9 @@ import CardDescripDos from "../components/dominios/CardDescripDos.astro";
                 </div>
                 <p class="my-5">Todos los planes incluyen migraciones, SSL gratis, copias de seguridad y 99,99% de tiempo de actividad garantizado</p>
                 <div>
-                    <a href="https://clientes.servistream.net/index.php?rp=/store/web-hosting-cloud/starter-plan" type="button" class="text-blue-700 hover:text-white border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2 dark:border-blue-500 dark:text-blue-500 dark:hover:text-white dark:hover:bg-blue-500 dark:focus:ring-blue-800">Comprar Ahora</a>
-                </div>
+					<BotonTres href="https://clientes.servistream.net/index.php?rp=/store/web-hosting-cloud/starter-plan" title="Comprar Ahora" />
+				</div>
+
             </div>
 
         </div>
