--- a/src/components/FooterOscuro.astro
+++ b/src/components/FooterOscuro.astro
@@ -41,13 +41,13 @@
         <li>
             <p class="font-bold text-white">Web Hosting</p>
             <ul>
-                <a class="text-sm font-light text-white" href="/hosting-linux">Hosting Linux</a>
+                <a class="text-sm font-light text-white" href="/hosting-linux/">Hosting Linux</a>
             </ul>
             <ul>
-                <a class="text-sm font-light text-white" href="/hosting-cloud">Hosting Cloud</a>
+                <a class="text-sm font-light text-white" href="/hosting-cloud/">Hosting Cloud</a>
             </ul>
             <ul>
-                <a class="text-sm font-light text-white" href="/hosting-reseller">Hosting Reseller</a>
+                <a class="text-sm font-light text-white" href="/hosting-reseller/">Hosting Reseller</a>
             </ul>
         </li>
 
@@ -75,10 +75,10 @@
         <li>
             <p class="font-bold text-white">Radio Streaming</p>
             <ul>
-                <a class="text-sm font-light text-white" href="/centovacast">CentovaCast</a>
+                <a class="text-sm font-light text-white" href="/centovacast/">CentovaCast</a>
             </ul>
             <ul>
-                <a class="text-sm font-light text-white" href="/sonicpanel">SonicPanel</a>
+                <a class="text-sm font-light text-white" href="/sonicpanel/">SonicPanel</a>
             </ul>
             <ul>
                 <a class="text-sm font-light text-white" href="#">Azuracast</a>
@@ -88,14 +88,14 @@
         <li>
             <p class="font-bold text-white">Tv Streaming</p>
             <ul>
-                <a class="text-sm font-light text-white" href="/tv-streaming">Streaming</a>
+                <a class="text-sm font-light text-white" href="/tv-streaming/">Streaming</a>
             </ul>
         </li>
 
         <li>
             <p class="font-bold text-white">Reseller Radio</p>
             <ul>
-                <a class="text-sm font-light text-white" href="/reseller-radio">CentovaCast</a>
+                <a class="text-sm font-light text-white" href="/reseller-radio/">CentovaCast</a>
             </ul>
         </li>
 
