--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -28,7 +28,7 @@
                   <ul class="mt-3 text-[15px]">
                     <li>
                       <a
-                        href="/hosting-linux"
+                        href="/hosting-linux/"
                         class="block p-2 -mx-2 rounded-lg hover:bg-gradient-to-br hover:from-indigo-50 hover:to-pink-50 hover:via-blue-50 transition ease-in-out duration-300 text-gray-800 font-semibold hover:text-indigo-600"
                       >
                         Hosting Linux
@@ -40,7 +40,7 @@
                     </li>
                     <li>
                       <a
-                        href="/hosting-cloud"
+                        href="/hosting-cloud/"
                         class="block p-2 -mx-2 rounded-lg hover:bg-gradient-to-br hover:from-indigo-50 hover:to-pink-50 hover:via-blue-50 transition ease-in-out duration-300 text-gray-800 font-semibold hover:text-indigo-600"
                       >
                         Hosting Cloud
@@ -52,7 +52,7 @@
                     </li>
                     <li>
                       <a
-                        href="/hosting-reseller"
+                        href="/hosting-reseller/"
                         class="block p-2 -mx-2 rounded-lg hover:bg-gradient-to-br hover:from-indigo-50 hover:to-pink-50 hover:via-blue-50 transition ease-in-out duration-300 text-gray-800 font-semibold hover:text-indigo-600"
                       >
                         Hosting Reseller
@@ -183,7 +183,7 @@
                   <ul class="mt-3 text-[15px]">
                     <li>
                       <a
-                        href="/centovacast"
+                        href="/centovacast/"
                         class="text-gray-600 hover:text-gray-800 py-1 block font-semibold"
                       >
                       CentovaCast
@@ -191,7 +191,7 @@
                     </li>
                     <li>
                       <a
-                        href="/sonicpanel"
+                        href="/sonicpanel/"
                         class="text-gray-600 hover:text-gray-800 py-1 block font-semibold"
                       >
                       SonicPanel
@@ -207,7 +207,7 @@
                     </li>
                     <li>
                       <a
-                        href="/reseller-radio"
+                        href="/reseller-radio/"
                         class="text-gray-600 hover:text-gray-800 py-1 block font-semibold"
                       >
                       Reseller
@@ -224,7 +224,7 @@
                   <ul class="mt-3 text-[15px]">
                     <li>
                       <a
-                        href="/tv-streaming"
+                        href="/tv-streaming/"
                         class="text-gray-600 hover:text-gray-800 py-1 block font-semibold"
                       >
                       Streaming HD
@@ -251,13 +251,13 @@
         </div>
       </li>
       <li class="relative group px-3 py-2">
-        <a href="/paginas-web" class="hover:opacity-50 cursor-pointer">Páginas Web</a>
+        <a href="/paginas-web/" class="hover:opacity-50 cursor-pointer">Páginas Web</a>
       </li>
       <li class="relative group px-3 py-2">
-        <a href="/dominios" class="hover:opacity-50 cursor-pointer">Dominios</a>
+        <a href="/dominios/" class="hover:opacity-50 cursor-pointer">Dominios</a>
       </li>
       <li class="relative group px-3 py-2">
-        <a href="/contacto" class="hover:opacity-50 cursor-pointer">Contacto</a>
+        <a href="/contacto/" class="hover:opacity-50 cursor-pointer">Contacto</a>
       </li>
     </ul>
   </nav>
@@ -277,7 +277,7 @@
             viewBox="0 0 10 10"
             aria-hidden="true"
           >
-            <g fill-rule="evenodd">
+            <g>
               <path
                 class="opacity-0 group-hover:opacity-100 transition ease-in-out duration-200"
                 d="M0 5h7"></path>
