--- a/src/components/hosting_linux/SubmenuHosting.astro
+++ b/src/components/hosting_linux/SubmenuHosting.astro
@@ -1,7 +1,7 @@
 <nav>
     <div class="grid grid-cols-4 contenedor mx-auto">
         <li class="color">
-            <a href="/hosting-linux">
+            <a href="/hosting-linux/">
                 <p
                     class="color__principal font-semibold barra__color rounded-md px-1 inline-block"
                 >
@@ -16,7 +16,7 @@
             </a>
         </li>
         <li class="hover__color">
-            <a href="/hosting-cloud">
+            <a class="group" href="/hosting-cloud/">
                 <p
                     class="color__principal font-semibold barra__color rounded-md px-1 inline-block"
                 >
@@ -25,12 +25,12 @@
                 <h2 class="text-2xl font-semibold pt-2 pb-2">Hosting Cloud</h2>
                 <p class="text-xs">
                     Todos nuestros planes <i
-                        class="fa-solid fa-arrow-right-long"></i>
+                        class="fa-solid fa-arrow-right-long opacity-0 group-hover:opacity-100 transition ease-in-out group-hover:transform group-hover:translate-x-1"></i>
                 </p>
             </a>
         </li>
         <li class="hover__color">
-            <a href="/hosting-reseller">
+            <a class="group" href="/hosting-reseller/">
                 <p
                     class="color__principal font-semibold barra__color rounded-md px-1 inline-block"
                 >
@@ -41,12 +41,12 @@
                 </h2>
                 <p class="text-xs">
                     Todos nuestros planes <i
-                        class="fa-solid fa-arrow-right-long"></i>
+                        class="fa-solid fa-arrow-right-long opacity-0 group-hover:opacity-100 transition ease-in-out group-hover:transform group-hover:translate-x-1"></i>
                 </p>
             </a>
         </li>
         <li class="hover__color">
-            <a href="/dominios">
+            <a class="group" href="/dominios/">
                 <p
                     class="color__principal font-semibold barra__color rounded-md px-1 inline-block"
                 >
@@ -55,7 +55,7 @@
                 <h2 class="text-2xl font-semibold pt-2 pb-2">Dominios Web</h2>
                 <p class="text-xs">
                     Todos nuestros planes <i
-                        class="fa-solid fa-arrow-right-long"></i>
+                        class="fa-solid fa-arrow-right-long opacity-0 group-hover:opacity-100 transition ease-in-out group-hover:transform group-hover:translate-x-1"></i>
                 </p>
             </a>
         </li>
