--- a/src/components/hosting_linux/cardPlanesHosting.astro
+++ b/src/components/hosting_linux/cardPlanesHosting.astro
@@ -32,6 +32,9 @@ const {
     des9,
     link,
 } = Astro.props;
+
+import BotonCinco from '../BotonCinco.astro';
+
 ---
 
 <section class="hover__planes">
@@ -55,7 +58,12 @@ const {
         <p class="text-sm font-semibold">{des7}</p>
         <p class="text-sm font-semibold">{des8}</p>
         <p class="text-sm font-semibold">{des9}</p>
-        <a class="bg-principal hover:bg-principalDegra text-white font-bold py-2 px-4 rounded-lg inline-block mt-5" href={link}>Comprar Ahora <i class="fa-solid fa-chevron-right text-xs pl-2"></i></a>
+        <a class="bg-[#00b285] hover:bg-[#378671] mt-10 group py-2 px-8 inline-block rounded-lg transition ease-in-out border border-transparent mb-4 lg:mb-0 md:mr-2" href={link}>
+            <div class="flex items-center">
+                <p class="text-white font-semibold">Comprar Ahora</p>
+                <img class="h-4 w-4 ml-3 opacity-100 group-hover:opacity-100 transition ease-in-out group-hover:transform group-hover:translate-x-1" src="/img/SolarCartLarge2Bold.svg" alt="Icono">
+            </div>
+        </a>
     </div>
 </section>
 
