--- a/src/components/hosting_reseller/SubmenuHostingReseller.astro
+++ b/src/components/hosting_reseller/SubmenuHostingReseller.astro
@@ -1,7 +1,7 @@
 <nav>
     <div class="grid grid-cols-4 contenedor mx-auto">
         <li class="hover__color">
-            <a href="/hosting-linux">
+            <a class="group" href="/hosting-linux/">
                 <p
                     class="color__principal font-semibold barra__color rounded-md px-1 inline-block"
                 >
@@ -10,12 +10,12 @@
                 <h2 class="text-2xl font-semibold pt-2 pb-2">Hosting Linux</h2>
                 <p class="text-xs">
                     Todos nuestros planes <i
-                        class="fa-solid fa-arrow-right-long"></i>
+                        class="fa-solid fa-arrow-right-long opacity-0 group-hover:opacity-100 transition ease-in-out group-hover:transform group-hover:translate-x-1"></i>
                 </p>
             </a>
         </li>
         <li class="hover__color">
-            <a href="/hosting-cloud">
+            <a class="group" href="/hosting-cloud/">
                 <p
                     class="color__principal font-semibold barra__color rounded-md px-1 inline-block"
                 >
@@ -24,13 +24,13 @@
                 <h2 class="text-2xl font-semibold pt-2 pb-2">Hosting Cloud</h2>
                 <p class="text-xs">
                     Todos nuestros planes <i
-                        class="fa-solid fa-arrow-right-long"></i>
+                        class="fa-solid fa-arrow-right-long opacity-0 group-hover:opacity-100 transition ease-in-out group-hover:transform group-hover:translate-x-1"></i>
                 </p>
                 
             </a>
         </li>
         <li class="color">
-            <a href="/hosting-reseller">
+            <a href="/hosting-reseller/">
                 <p
                     class="color__principal font-semibold barra__color rounded-md px-1 inline-block"
                 >
@@ -47,7 +47,7 @@
             </a>
         </li>
         <li class="hover__color">
-            <a href="/dominios">
+            <a class="group" href="/dominios/">
                 <p
                     class="color__principal font-semibold barra__color rounded-md px-1 inline-block"
                 >
@@ -56,7 +56,7 @@
                 <h2 class="text-2xl font-semibold pt-2 pb-2">Dominios Web</h2>
                 <p class="text-xs">
                     Todos nuestros planes <i
-                        class="fa-solid fa-arrow-right-long"></i>
+                        class="fa-solid fa-arrow-right-long opacity-0 group-hover:opacity-100 transition ease-in-out group-hover:transform group-hover:translate-x-1"></i>
                 </p>
             </a>
         </li>
