--- a/src/pages/hosting-reseller.astro
+++ b/src/pages/hosting-reseller.astro
@@ -8,6 +8,8 @@ import Footer from "../components/Footer.astro";
 import CardPlanesHostingReseller from "../components/hosting_reseller/cardPlanesHostingReseller.astro";
 import DescripcionHosting from "../components/hosting_linux/cardDescrip.astro";
 
+import BotonDos from "../components/BotonDos.astro";
+
 ---
 
 <Layout title="Hosting Internet Services | Hosting Reseller">
@@ -156,8 +158,9 @@ import DescripcionHosting from "../components/hosting_linux/cardDescrip.astro";
                 <p class="text-white">Cada cuenta de revendedor de hosting es completamente
                     de marca blanca y viene con almacenamiento SSD súper rápido,
                     ancho de banda ilimitado, correos electrónicos, SSL automáticos y migraciones</p>
-
-        <a class="bg-principal hover:bg-principalDegra text-white font-bold py-2 px-4 rounded-lg inline-block mt-5" href="#">Comprar Ahora <i class="fa-solid fa-chevron-right text-xs pl-2"></i></a>
+            <div class="mt-10">
+				<BotonDos href="https://clientes.servistream.net/index.php?rp=/store/reseller-hosting-cpanel/go-reseller" title="Comprar Ahora"/>
+			</div>
 
         </div>
 
