--- a/src/pages/hosting-linux.astro
+++ b/src/pages/hosting-linux.astro
@@ -14,6 +14,8 @@ import LogosScrollHosting from "../components/hosting_linux/LogosScrollHosting.a
 
 import BotonTres from "../components/BotonTres.astro";
 import BotonSeisBlack from "../components/BotonSeisBlack.astro";
+import ExternalScript from "../components/ExternalScript.astro";
+import Acordion from "../components/Acordion.astro";
 
 ---
 
@@ -436,269 +438,11 @@ import BotonSeisBlack from "../components/BotonSeisBlack.astro";
 
     <!-- INICIO CODIGO SECCION PREGUNTAS FRECUENTES-->
 
-    <section class="bg-white pt-20 pb-20">
-        <div class="contenedor__hosting__preguntas mx-auto px-5">
-            <h2 class="mb-12">Preguntas Frecuentes</h2>
-            <div class="relative mb-3">
-                <h6 class="mb-0">
-                    <button
-                        class="border-slate-100 text-slate-700 rounded-t-1 group relative flex w-full cursor-pointer items-center border-b border-solid p-4 text-left font-semibold text-dark-500 transition-all ease-in"
-                        data-collapse-target="collapse-1"
-                    >
-                        <span>¿Qué es Hosting?</span>
-                        <i
-                            class="fa fa-plus absolute right-0 pt-1 text-xs group-open:opacity-0"
-                        ></i>
-                        <i
-                            class="fa fa-minus absolute right-0 pt-1 text-xs opacity-0 group-open:opacity-100"
-                        ></i>
-                    </button>
-                </h6>
-                <div
-                    data-collapse="collapse-1"
-                    class="h-0 overflow-hidden transition-all duration-300 ease-in-out"
-                >
-                    <div
-                        class="p-4 text-sm leading-normal text-blue-gray-500/80"
-                    >
-                        Vamos a desglosarlo. Lo básico: quieres un sitio web.
-                        Tiene grandes ideas para el contenido, un tablero con la
-                        descripción completa de tu visión, el tono con el que se
-                        comunicará, e incluso una lista de las funciones
-                        adicionales que deseas para tu sitio web. Pero, ¿cómo
-                        publicas exactamente tu sitio en línea? Ahí es donde
-                        entra el alojamiento. Tu sitio web necesita un proveedor
-                        de alojamiento para tenerlo en la web y disponible
-                        públicamente para ser visitado. Los alojadores web son
-                        empresas que proporcionan el espacio de servidor
-                        necesario para almacenar tu sitio web. A medida que el
-                        tráfico web intenta acceder a tu sitio, los datos
-                        necesarios se transmiten desde el servidor al
-                        dispositivo de los visitantes. Sin embargo, los
-                        proveedores de alojamiento web difieren en la variedad
-                        de tipos de planes y opciones que ofrecen. Por lo tanto,
-                        tener un proveedor de alojamiento web de calidad es
-                        crucial.
-                    </div>
-                </div>
-            </div>
-            <div class="relative mb-3">
-                <h6 class="mb-0">
-                    <button
-                        class="border-slate-100 text-slate-700 rounded-t-1 group relative flex w-full cursor-pointer items-center border-b border-solid p-4 text-left font-semibold text-dark-500 transition-all ease-in"
-                        data-collapse-target="collapse-2"
-                    >
-                        <span>¿Cuántos sitios puedo alojar?</span>
-                        <i
-                            class="fa fa-plus absolute right-0 pt-1 text-xs group-open:opacity-0"
-                        ></i>
-                        <i
-                            class="fa fa-minus absolute right-0 pt-1 text-xs opacity-0 group-open:opacity-100"
-                        ></i>
-                    </button>
-                </h6>
-                <div
-                    data-collapse="collapse-2"
-                    class="h-0 overflow-hidden transition-all duration-300 ease-in-out"
-                >
-                    <div
-                        class="p-4 text-sm leading-normal text-blue-gray-500/80"
-                    >
-                        ¿Estás comenzando? Con un Plan Deluxe, puedes alojar un
-                        sitio web ¡Un excelente lugar para comenzar! Si buscas
-                        administrar varios sitios, el plan Unlimited te permite
-                        alojar sitios web ilimitados. Cuál sea la flexibilidad
-                        que necesites, servistream la tiene.
-                    </div>
-                </div>
-            </div>
-            <div class="relative mb-3">
-                <h6 class="mb-0">
-                    <button
-                        class="border-slate-100 text-slate-700 rounded-t-1 group relative flex w-full cursor-pointer items-center border-b border-solid p-4 text-left font-semibold text-dark-500 transition-all ease-in"
-                        data-collapse-target="collapse-3"
-                    >
-                        <span>¿El web hosting incluye correo electrónico?</span>
-                        <i
-                            class="fa fa-plus absolute right-0 pt-1 text-xs group-open:opacity-0"
-                        ></i>
-                        <i
-                            class="fa fa-minus absolute right-0 pt-1 text-xs opacity-0 group-open:opacity-100"
-                        ></i>
-                    </button>
-                </h6>
-                <div
-                    data-collapse="collapse-3"
-                    class="h-0 overflow-hidden transition-all duration-300 ease-in-out"
-                >
-                    <div
-                        class="p-4 text-sm leading-normal text-blue-gray-500/80"
-                    >
-                        Sea que estés construyendo tu negocio o tu marca (o
-                        ambas), quieres empezar con el pie derecho. Un correo
-                        exclusivo relacionado con tu dominio puede brindarte un
-                        look profesional mientras trabajas para hacer crecer tu
-                        negocio.
-                    </div>
-                </div>
-            </div>
-            <div class="relative mb-3">
-                <h6 class="mb-0">
-                    <button
-                        class="border-slate-100 text-slate-700 rounded-t-1 group relative flex w-full cursor-pointer items-center border-b border-solid p-4 text-left font-semibold text-dark-500 transition-all ease-in"
-                        data-collapse-target="collapse-4"
-                    >
-                        <span
-                            >¿Cuál es la diferencia entre el nombre de un
-                            dominio y el web hosting?</span
-                        >
-                        <i
-                            class="fa fa-plus absolute right-0 pt-1 text-xs group-open:opacity-0"
-                        ></i>
-                        <i
-                            class="fa fa-minus absolute right-0 pt-1 text-xs opacity-0 group-open:opacity-100"
-                        ></i>
-                    </button>
-                </h6>
-                <div
-                    data-collapse="collapse-4"
-                    class="h-0 overflow-hidden transition-all duration-300 ease-in-out"
-                >
-                    <div
-                        class="p-4 text-sm leading-normal text-blue-gray-500/80"
-                    >
-                        Un nombre de dominio es la dirección única .com (o
-                        cualquier otra extensión) donde se puede encontrar tu
-                        sitio en la web. Pero para que tu sitio web esté en
-                        línea, también necesitarás un proveedor de alojamiento
-                        web para proporcionar el espacio de servidor necesario
-                        de almacenamiento para tu sitio. Para un sitio
-                        completamente funcional, necesitas un nombre de dominio
-                        y un buen proveedor de alojamiento web. Para simplificar
-                        las cosas, puedes mantener tus necesidades internas,
-                        permitiendo que un proveedor suministre tanto el nombre
-                        de dominio y hosting web.
-                    </div>
-                </div>
-            </div>
-            <div class="relative mb-3">
-                <h6 class="mb-0">
-                    <button
-                        class="border-slate-100 text-slate-700 rounded-t-1 group relative flex w-full cursor-pointer items-center border-b border-solid p-4 text-left font-semibold text-dark-500 transition-all ease-in"
-                        data-collapse-target="collapse-5"
-                    >
-                        <span
-                            >¿Puedo actualizar a un plan más poderoso después?</span
-                        >
-                        <i
-                            class="fa fa-plus absolute right-0 pt-1 text-xs group-open:opacity-0"
-                        ></i>
-                        <i
-                            class="fa fa-minus absolute right-0 pt-1 text-xs opacity-0 group-open:opacity-100"
-                        ></i>
-                    </button>
-                </h6>
-                <div
-                    data-collapse="collapse-5"
-                    class="h-0 overflow-hidden transition-all duration-300 ease-in-out"
-                >
-                    <div
-                        class="p-4 text-sm leading-normal text-blue-gray-500/80"
-                    >
-                        ¡Claro que sí! Sabemos que tu objetivo final es
-                        probablemente hacer crecer tu sitio web con el tiempo.
-                        ¡Queremos eso para ti! Cuando el tráfico de tu sitio
-                        alcanza niveles de hora pico, se desborda de contenido,
-                        o simplemente necesita más tecnología y características
-                        de alta potencia, puedes actualizar a un plan con
-                        campanas, silbatos y potencia de rendimiento
-                        adicionales. Si bien el Plan Deluxe es una opción
-                        inteligente y económica cuando se es un principiante, un
-                        sitio rico en contenido y con mucho tráfico puede exigir
-                        un plan a mayor capacidad, lo que significa espacio de
-                        servidor adicional, recursos especialmente dedicados,
-                        seguridad avanzada y aceleración en velocidades.
-                    </div>
-                </div>
-            </div>
-            <div class="relative mb-3">
-                <h6 class="mb-0">
-                    <button
-                        class="border-slate-100 text-slate-700 rounded-t-1 group relative flex w-full cursor-pointer items-center border-b border-solid p-4 text-left font-semibold text-dark-500 transition-all ease-in"
-                        data-collapse-target="collapse-6"
-                    >
-                        <span>¿Incluyen certificados de seguridad SSL?</span>
-                        <i
-                            class="fa fa-plus absolute right-0 pt-1 text-xs group-open:opacity-0"
-                        ></i>
-                        <i
-                            class="fa fa-minus absolute right-0 pt-1 text-xs opacity-0 group-open:opacity-100"
-                        ></i>
-                    </button>
-                </h6>
-                <div
-                    data-collapse="collapse-6"
-                    class="h-0 overflow-hidden transition-all duration-300 ease-in-out"
-                >
-                    <div
-                        class="p-4 text-sm leading-normal text-blue-gray-500/80"
-                    >
-                        Nos preocupamos mucho por la seguridad - y también lo
-                        hacen los visitantes de tu sitio web. Con una cuenta de
-                        Plan Deluxe, obtienes un certificado SSL gratis para
-                        agregar a tu sitio. En estos días, tener un SSL para tu
-                        sitio es una buena práctica casi obvia. No solo un SSL
-                        ayuda a tus visitantes a sentirse seguros interactuando
-                        con tu sitio - también es particularmente importante si
-                        administras un sitio de comercio electrónico - y evitará
-                        penalizaciones de los motores de búsqueda, que te pueden
-                        afectar fácilmente si no tienes uno. Ningún sitio web
-                        quiere una etiqueta de "inseguro" o "insegura" que dañe
-                        su reputación. Si bien un certificado SSL no es una
-                        defensa infalible contra los chicos malos de Internet,
-                        es sin duda un gran primer paso en la dirección correcta
-                        para poner a los visitantes de tu sitio seguros.
-                    </div>
-                </div>
-            </div>
-            <div class="relative mb-3">
-                <h6 class="mb-0">
-                    <button
-                        class="border-slate-100 text-slate-700 rounded-t-1 group relative flex w-full cursor-pointer items-center border-b border-solid p-4 text-left font-semibold text-dark-500 transition-all ease-in"
-                        data-collapse-target="collapse-7"
-                    >
-                        <span
-                            >¿Qué pasa si tengo un dominio en otra empresa, lo
-                            puedo transferir?</span
-                        >
-                        <i
-                            class="fa fa-plus absolute right-0 pt-1 text-xs group-open:opacity-0"
-                        ></i>
-                        <i
-                            class="fa fa-minus absolute right-0 pt-1 text-xs opacity-0 group-open:opacity-100"
-                        ></i>
-                    </button>
-                </h6>
-                <div
-                    data-collapse="collapse-7"
-                    class="h-0 overflow-hidden transition-all duration-300 ease-in-out"
-                >
-                    <div
-                        class="p-4 text-sm leading-normal text-blue-gray-500/80"
-                    >
-                        ¡Sí! Olvídate de empacar cajas virtuales o preocuparte
-                        por una dirección de reenvío: nos encargaremos de las
-                        tareas de transferencia y haremos que moverse a
-                        servistream sea F-Á-C-I-L. Al transferir tu registro de
-                        dominio de tu antiguo proveedor a servistream, puedes
-                        administrar fácilmente todos los aspectos de tu dominio
-                        desde una ubicación conveniente.
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
+    <div>
+        <Acordion/>
+    </div>
+    
+    
     <!-- INICIO CODIGO SECCION FOOTER-->
     <Footer />
 </Layout>
@@ -776,7 +520,3 @@ import BotonSeisBlack from "../components/BotonSeisBlack.astro";
         background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
     }
 </style>
-
-<script
-    src="https://unpkg.com/@material-tailwind/html@latest/scripts/collapse.js"
-></script>
