--- a/src/pages/hosting-linux.astro
+++ b/src/pages/hosting-linux.astro
@@ -439,10 +439,10 @@ import Acordion from "../components/Acordion.astro";
     <!-- INICIO CODIGO SECCION PREGUNTAS FRECUENTES-->
 
     <div>
-        <Acordion/>
+        <Acordion client:visible/>
     </div>
     
-    
+
     <!-- INICIO CODIGO SECCION FOOTER-->
     <Footer />
 </Layout>
