--- a/src/pages/hosting-linux.astro
+++ b/src/pages/hosting-linux.astro
@@ -438,7 +438,7 @@ import Acordion from "../components/Acordion.astro";
 
     <!-- INICIO CODIGO SECCION PREGUNTAS FRECUENTES-->
 
-    <div>
+    <div class="bg-white py-20">
         <Acordion client:visible/>
     </div>
     
