--- a/src/pages/hosting-linux.astro
+++ b/src/pages/hosting-linux.astro
@@ -439,7 +439,7 @@ import Acordion from "../components/Acordion.astro";
     <!-- INICIO CODIGO SECCION PREGUNTAS FRECUENTES-->
 
     <div class="bg-white py-20">
-        <Acordion client:visible/>
+        <Acordion/>
     </div>
     
 
