--- a/src/components/ExternalScript.astro
+++ b/src/components/ExternalScript.astro
@@ -1,4 +1,1 @@
-<script is:inline src="/scripts/app.js"></script>
-<!-----
-<script is:inline src="/scripts/app2.js"></script>
---- --> 
+<script is:inline src="/scripts/accordionfaq.js"></script>
