--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -173,7 +173,7 @@ import CardDescripDos from "../components/dominios/CardDescripDos.astro";
                             </label>
                         </div>
                         <button
-                            class="shadow bg-indigo-600 hover:bg-indigo-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-6 rounded"
+                            class="bg-[#00b285] hover:bg-[#378671] text-white font-semibold py-2 px-8 inline-block rounded-lg transition ease-in-out border border-transparent mb-4 lg:mb-0 md:mr-2"
                             type="submit">
                             Enviar Mensaje Ahora
                         </button>
