--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -204,7 +204,7 @@
                 <a class="text-sm font-light" href="/sonicpanel/">SonicPanel</a>
             </ul>
             <ul>
-                <a class="text-sm font-light" href="#">Azuracast</a>
+                <a class="text-sm font-light" href="/server-azuracast/">Azuracast</a>
             </ul>
         </li>
 
