--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -199,7 +199,7 @@
                     </li>
                     <li>
                       <a
-                        href="#"
+                        href="/server-azuracast/"
                         class="text-gray-600 hover:text-gray-800 py-1 block font-semibold"
                       >
                       Server Azuracast
