--- a/src/components/tv_streaming/PlayerTv.astro
+++ b/src/components/tv_streaming/PlayerTv.astro
@@ -6,10 +6,10 @@ import '../../style/playerForest.css'
   <body>
     <video
       id="my-video"
-      class="video-js vjs-theme-forest"
+      class="video-js vjs-16-9 vjs-theme-forest"
       controls
       preload="auto"
-      width="840"
+      width="580"
       height="auto"
       poster="/img/stats-vdo.png"
       data-setup="{}"
