--- a/src/pages/tv-streaming.astro
+++ b/src/pages/tv-streaming.astro
@@ -24,7 +24,7 @@ import PlayerTv from "../components/tv_streaming/PlayerTv.astro";
             <div class="pt-4 lg:hidden"><MobileMenu /></div>
 
             <div
-                class="contenedor mx-auto text-center flex flex-col justify-center items-center py-10 px-5"
+                class="contenedor mx-auto text-center items-center py-10 px-5"
             >
                 <h1
                     class="text-white text-3xl font-light pb-5 tracking-tighter md:text-5xl lg:text-6xl"
@@ -36,29 +36,40 @@ import PlayerTv from "../components/tv_streaming/PlayerTv.astro";
                     Su señal contará con la mejor calidad de streaming en Internet y con las mejores <br> condiciones, una plataforma tecnológica segura, robusta y fiable
                 </p>
 
+                <div class="contenedor-tv-player mx-auto">
                     <PlayerTv/>
-    
-                <div>
-                    <p class="text-white bg-morado inline-block py-1 px-4 rounded-md mt-10 text-sm font-semibold">Proporcionado por VDO, Panel de control de transmisión de video líder en la industria
-                    </p>
                 </div>
 
-                <div class="flex flex-col  items-center mt-10 md:flex-row">
-                    <a
-                        href="https://clientes.servistream.net/index.php?rp=/store/streaming-radio/stream-basico"
-                        class="relative inline-flex items-center justify-center p-0.5 overflow-hidden text-sm font-medium text-gray-900 rounded-lg group bg-gradient-to-br from-purple-600 to-blue-500 group-hover:from-purple-600 group-hover:to-blue-500 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 mb-5 md:mb-0"
-                    >
-                        <span
-                            class="relative px-5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0"
-                        >
-                            Comprar Streaming Ahora
-                        </span>
-                    </a>
-                    <a href="#ver_precios" class="text-sm font-medium text-white ml-5"
-                        >Comparar Precios <i class="fa-solid fa-arrow-down-long"
-                        ></i></a
-                    >
+
                 </div>
+
+                <section class="flex flex-col items-center">
+
+                    <div>
+                        <p class="text-white bg-morado inline-block py-1 px-4 rounded-md mt-10 text-sm font-semibold">Proporcionado por VDO, Panel de control de transmisión de video líder en la industria
+                        </p>
+                    </div>
+    
+                    <div class="flex flex-col  items-center mt-10 md:flex-row">
+                        <a
+                            href="https://clientes.servistream.net/index.php?rp=/store/streaming-radio/stream-basico"
+                            class="relative inline-flex items-center justify-center p-0.5 overflow-hidden text-sm font-medium text-gray-900 rounded-lg group bg-gradient-to-br from-purple-600 to-blue-500 group-hover:from-purple-600 group-hover:to-blue-500 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 mb-5 md:mb-0"
+                        >
+                            <span
+                                class="relative px-5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0"
+                            >
+                                Comprar Streaming Ahora
+                            </span>
+                        </a>
+                        <a href="#ver_precios" class="text-sm font-medium text-white ml-5"
+                            >Comparar Precios <i class="fa-solid fa-arrow-down-long"
+                            ></i></a
+                        >
+                    </div>
+
+                </section>
+
+
 
                 <!-- INICIO CODIGO SECCION LOGOS CLIENTES SCROLL HOSTING-->
 
@@ -69,6 +80,10 @@ import PlayerTv from "../components/tv_streaming/PlayerTv.astro";
                 </article>
             </div>
         </header>
+
+
+
+
 
 
         <section class="grid grid-cols-1 contenedor mx-auto gap-5 px-5 md:grid-cols-2 lg:grid-cols-3">
