--- a/src/components/server_azuracast/PreciosAzura.astro
+++ b/src/components/server_azuracast/PreciosAzura.astro
@@ -23,11 +23,11 @@ const { plan, activacion, ram, core, capacidad, conexion, precio, ubicacion } = 
     <div class="flex justify-between items-center flex-wrap">
         <div class="flex items-center flex-wrap">
             <div><img src="/img/MdiCircleSlice8.svg" class="mr-5" width="15" height="15" alt="Icono"></div>
-            <p class="mr-3">{ram}</p>
-            <p class="mr-3">{core}</p>
-            <p class="mr-3">{capacidad}</p>
-            <p class="mr-3">{conexion}</p>
-            <p>Región: {ubicacion}</p>
+            <p class="mr-3 text-sm font-semibold">{ram}</p>
+            <p class="mr-3 text-sm font-semibold">{core}</p>
+            <p class="mr-3 text-sm font-semibold">{capacidad}</p>
+            <p class="mr-3 text-sm font-semibold">{conexion}</p>
+            <p class="text-sm font-semibold">Región: {ubicacion}</p>
         </div>
         <p class="text-2xl font-semibold">{precio}<span class="text-sm">/mes</span></p>
     </div>
