--- a/src/pages/terminos.astro
+++ b/src/pages/terminos.astro
@@ -16,9 +16,6 @@ import Footer from "../components/Footer.astro";
             <Menu />
         </div>
         <div class="pt-4 lg:hidden"><MobileMenu /></div>
-
-
-
     </header>
 
     <!-- INICIO CODIGO SECCION SUBMENU HOSTING-->
@@ -26,8 +23,7 @@ import Footer from "../components/Footer.astro";
 
     <section class="contenedor mx-auto my-20">
         <h2>Términos y Condiciones</h2>
-        <p>El presente documento sufre modificaciones y actualizaciones, se recomienda leerlo constantemente
-            </p>
+        <p>El presente documento sufre modificaciones y actualizaciones, se recomienda leerlo constantemente</p>
     </section>
 
 </header>
