--- a/src/components/Top.astro
+++ b/src/components/Top.astro
@@ -45,8 +45,8 @@
             </svg>
         </a>
         <nav class="flex items-center text-white">
-            <a href="/preguntas-frecuentes" class="pl-3">Preguntas Frecuentes</a>
-            <a href="/terminos" class="pl-3">Términos y Condiciones</a>
+            <a href="/preguntas-frecuentes/" class="pl-3">Preguntas Frecuentes</a>
+            <a href="/terminos/" class="pl-3">Términos y Condiciones</a>
             <a href="https://blog.servistream.net" class="pl-3">Noticias</a>
             <a href="https://walink.co/4f797c" target="_blank" class="pl-3 flex items-center">
                 <p class="pr-1 underline text-white">WhatsApp</p>
