--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -82,11 +82,16 @@ const { title } = Astro.props;
 			font-weight: 400;
 		}
 
+		h1{
+			text-wrap: balance;
+		}
+
 		h2 {
 			color: #181a1c;
 			font-weight: 700;
 			font-size: 3rem/* 60px */;
     		line-height: 1;
+			text-wrap: balance;
 		}
 
 		h5{
@@ -94,7 +99,8 @@ const { title } = Astro.props;
 			font-weight: 600;
 			font-size: 1.25rem; /* 20px */
 			line-height: 1.75rem; /* 28px */
-			padding-top: 1rem
+			padding-top: 1rem;
+			text-wrap: balance;
 		}
 
 		.contenedor {
