--- a/src/pages/server-azuracast.astro
+++ b/src/pages/server-azuracast.astro
@@ -9,7 +9,7 @@ import PreciosAzura from "../components/server_azuracast/PreciosAzura.astro"
 
 ---
 
-<Layout title="Hosting Internet Services | Páginas Web">
+<Layout title="Hosting Internet Services | Server Azuracast">
     <!-- INICIA CODIGO SECCION HEADER-->
 
     <main>
@@ -53,7 +53,7 @@ import PreciosAzura from "../components/server_azuracast/PreciosAzura.astro"
     <section class="my-20">
 
         <div class="contenedor_planes mx-auto mb-5">
-            <PreciosAzura plan="Azure Cloud S" activacion="SERVIDOR PROPIO | INSTALACIÓN EN UNAS HORAS" ram="8 GB RAM" core="4 vCPU Cores" capacidad="200 GB SSD" conexion="32 TB Traffic" ubicacion="Estados Unidos" precio="$15" >
+            <PreciosAzura plan="Azure Cloud S" activacion="SERVIDOR PROPIO | INSTALACIÓN EN UNAS HORAS" ram="8 GB RAM" core="4 vCPU Cores" capacidad="200 GB SSD" conexion="32 TB Traffic - Unlimited Incoming" ubicacion="Estados Unidos" precio="$15" >
 
         </div>
         <div class="contenedor_planes mx-auto mb-5">
